fix overflow on mobile

--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -2,8 +2,10 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  width: 100vw;
   height: 100vh;
   padding-top: 8rem;
+  overflow-x: hidden;
 
   @include screen('small') {
     padding-top: 6rem;
@@ -48,6 +50,7 @@
     margin-top: 15rem;
     cursor: grab;
     --scale: 0;
+    background-color: bisque;
 
     @include screen('small') {
       --min-size: unset;
